<resources>
    <string name="app_name">Mission Tracker for Dead Frontier 2</string>

    <string name="action_settings">Settings</string>

    <string name="mission_filter">Mission City:</string>
    <string name="giver_filter">Quest Giver City:</string>

    <string name="mission_location">Mission Location: </string>
    <string name="mission_guide">Mission Guide</string>

    <string name="quest_giver">Guest Giver: </string>
    <string name="quest_giver_location">Guest Giver Location: </string>
    <string name="quest_giver_room">Quest Giver Room</string>

    <string name="money">Money: </string>
    <string name="exp">Exp: </string>

    <string name="sorting">Sorting</string>
    <string name="sorting_desc">Choose a field to sort missions by
    \nCurrent setting: \%s</string>

    <string name="ordering">Ordering</string>
    <string name="ordering_desc">Order missions by Ascending or Descending order
        \nCurrent setting: \%s</string>

    <string name="default_mission_city">Default Mission City</string>
    <string name="default_mission_city_desc">Choose which Mission City to have selected each time
        you open the app\nCurrent setting: \%s</string>

    <string name="default_quest_giver_city">Default Quest Giver City</string>
    <string name="default_quest_giver_city_desc">Choose which Quest Giver City to have selected each
        time you open the app\nCurrent setting: \%s</string>

    <string name="hide_missions">Hide Missions</string>

    <string name="hide_ui_elements">Hide UI Elements</string>

</resources>
