<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/missionListLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/missionTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/missionLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/mission_location"/>

        <TextView
            android:id="@+id/missionBuildingCityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/missionWalkthroughTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/red"
        android:text="@string/mission_guide"/>

    <TextView
        android:id="@+id/missionGuideTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/questGiverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/quest_giver"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/questGiverNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/questGiverLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:text="@string/quest_giver_location"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/questGiverBuildingCityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/questGiverWalkthroughTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/quest_giver_room"/>

    <TextView
        android:id="@+id/questGiverRoomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="3dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moneyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/money"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/moneyAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/expTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/exp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/expAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>